--- a/master.css
+++ b/master.css
@@ -12,6 +12,10 @@ body {
 	cursor: pointer;
 }
 
+h1 {
+	font-family: "Source Code Pro";
+}
+
 button:focus {
 	outline: none;
 }
@@ -22,7 +26,7 @@ button.open:hover {
 
 .sidebar {
 	background-color: #fff;
-	font-family: "Source Code Pro", monospace;
+	font-family: "Source Code Pro";
 	font-weight: 400;
 	padding-top: 60px;
 	height: 100%;
