--- a/master.css
+++ b/master.css
@@ -165,6 +165,11 @@ button.open:hover {
 	font-weight: 700;
 }
 
+/*.projectInfo .close:hover {
+	color: #ff0000;
+	font-weight: 700;
+}*/
+
 ::selection {
 	color: #00c25d;
 }
